--- a/index.html
+++ b/index.html
@@ -184,18 +184,8 @@
                                 <rect width="24.1906" height="24.1906" transform="matrix(0.712635 0.701535 -0.712635 0.701535 17.5566 0.294189)" fill="#C69A39"/>
                             </g>
                         </svg>
-                        Завантажити відео з комп'ютера
-                    </button>
-                    <button class="btn btn-with-icon creation-media__attachment creation-media__attachment-mobile">
-                        <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <mask id="mask0_746_319180" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="5" width="25" height="24">
-                                <path d="M18.4568 23.8072L10.8572 16.326C9.35598 14.8482 9.11895 12.4511 10.4693 10.8389C12.0137 8.99333 14.8007 8.89433 16.4815 10.549L25.3596 19.2888C26.3006 20.2151 26.4801 21.7212 25.6397 22.7324C24.67 23.8991 22.9246 23.9628 21.8687 22.9233L14.3266 15.4987C13.9315 15.1098 13.9315 14.4734 14.3266 14.0845C14.7216 13.6956 15.3681 13.6956 15.7632 14.0845L22.0483 20.2717C22.3428 20.5616 22.8312 20.5616 23.1257 20.2717C23.4202 19.9818 23.4202 19.5009 23.1257 19.211L16.9412 13.1228C16.0002 12.1965 14.4702 12.0197 13.4431 12.8471C12.2579 13.8017 12.1933 15.5199 13.2491 16.5594L20.6691 23.8638C22.1704 25.3416 24.6054 25.575 26.2431 24.2456C28.125 22.7183 28.2184 19.9818 26.5376 18.3271L17.7241 9.65094C15.6626 7.62154 12.3082 7.2892 10.0599 9.1206C7.48123 11.2349 7.34476 14.9896 9.65767 17.2665L17.3793 24.8679C17.6738 25.1578 18.1623 25.1578 18.4568 24.8679C18.7513 24.578 18.7513 24.0971 18.4568 23.8072Z" fill="black"/>
-                            </mask>
-                            <g mask="url(#mask0_746_319180)">
-                                <rect width="24.1906" height="24.1906" transform="matrix(0.712635 0.701535 -0.712635 0.701535 17.5566 0.294189)" fill="#C69A39"/>
-                            </g>
-                        </svg>
-                        Завантажити відео з телефону
+                        <span class="desctop">Завантажити відео з комп'ютера </span>
+                        <span class="mobile">Завантажити відео з телефону</span>
                     </button>
                 </div>
             </section>
