--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.min.css">
+    <link rel="stylesheet" href="./style/owl.carousel.min.css">
     <title>Inheart</title>
 </head>
 <body class="bg-light-blue">
@@ -127,6 +128,68 @@
                         <input id="template-radio-4" type="radio" name="template-radio" class="creation-template__radio">
                         <label for="template-radio-4" class="text creation-template__name">Блакитний</label>
                     </div>
+                </div>
+                <div class="creation-template__carousel-wrap">
+                    <button class="creation-template__carousel-btn template-left-btn">
+                        <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.76222 0.385486L1.33594 5.81177L6.76222 11.238" stroke="#131414"/>
+                        </svg>                            
+                    </button>
+                    <div class="creation-template__carousel owl-carousel">
+                        <div class="creation-template__item">
+                            <div class="creation-template__hero">
+                                <img src="./assets/color-templates/1.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="text creation-template__name">Класичний</div>
+                        </div>
+                        <div class="creation-template__item">
+                            <div class="creation-template__hero">
+                                <img src="./assets/color-templates/2.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="text creation-template__name">Чорний</div>
+                        </div>
+                        <div class="creation-template__item">
+                            <div class="creation-template__hero">
+                                <img src="./assets/color-templates/3.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="text creation-template__name">Червоний</div>
+                        </div>
+                        <div class="creation-template__item">
+                            <div class="creation-template__hero">
+                                <img src="./assets/color-templates/4.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="text creation-template__name">Блакитний</div>
+                        </div>
+                    </div>
+                    <button class="creation-template__carousel-btn template-right-btn">
+                        <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.23778 11.6145L6.66406 6.18823L1.23778 0.76195" stroke="#131414"/>
+                        </svg>                                                       
+                    </button>
                 </div>
             </section>
             <!-- Епітафія -->
@@ -359,7 +422,9 @@
             <a href="">Privacy Policy</a>
         </div>
     </footer>
+    <script src="./script/jquery.slim.js"></script>
     <script src="./script/imask.js"></script>
+    <script src="./script/owl.carousel.min.js"></script>
     <script src="./script/main.js"></script>
 </body>
 </html>
