compas modal added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -422,6 +422,42 @@
             <a href="">Privacy Policy</a>
         </div>
     </footer>
+
+    <!-- Компас модал -->
+    <div class="modal">
+        <div class="container modal__container">
+            <div class="modal__hero">
+                <div class="modal__content">
+                    <h2 class="modal__title">Як дізнатися точні координати поховання?</h2>
+                    <p class="modal__text">
+                        Точні координати допоможуть швидко знайти поховання. Це особливо актуально, якщо цвинтар старий і на ньому немає зрозумілої навігації.
+                    </p>
+                    <ul class="modal__list">
+                        <li class="modal__item">
+                            <div class="modal__num">1</div>
+                            <p>
+                                Вам потрібно бути поряд із похованням, <br> щоб точно визначити координати.
+                            </p>
+                        </li>
+                        <li class="modal__item">
+                            <div class="modal__num">2</div>
+                            <p>
+                                Відкрийте додаток “Компас” у вашому телефоні. <br> Якщо у вас айфон, скористайтеся встановленим компасом. Якщо у вас андроїд, скачайте програму Компас з <a href="#">Play market</a>
+                            </p>
+                        </li>
+                        <li class="modal__item">
+                            <div class="modal__num">3</div>
+                            <p>
+                                Скопіюйте або перепишіть цифри, які ви <br> бачите поряд із адресою. Це і є чіткі координати.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <img src="./assets/compas.png" alt="Compas" class="modal__comapas-img">
+            </div>
+            <dib class="modal__btn">Закрити</dib>
+        </div>
+    </div>
     <script src="./script/jquery.slim.js"></script>
     <script src="./script/imask.js"></script>
     <script src="./script/owl.carousel.min.js"></script>
