index page container edits

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <!-- Бiографiя -->
             <section class="creation-page__section creation-epitaph">
                 <h2 class="title creation-page__section-title">Бiографiя</h2>
-                <p class="text creation-epitaph__text">
+                <p class="text creation-bibliograph__text">
                     Напишіть якомога детальну біографію. Це дозволить передати пам'ять про людину через покоління. Якщо ви не можете згадати якийсь момент із життя, не переживайте! Біографію можна відредагувати чи доповнити у майбутньому
                 </p>
                 <div class="input__wrapper mb-0">
