--- a/page.html
+++ b/page.html
@@ -23,6 +23,7 @@
         </div>
     </header>
     <main>
+        <!-- Head -->
         <div class="page-head">
             <div class="page-head__hero">
                 <div class="page-head__thumbnail">
@@ -45,6 +46,17 @@
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
                 </p>
                 <p class="page-head__author">Mike Wazowsky</p>
+            </div>
+        </div>
+        <!-- Biography -->
+        <div class="page-biography">
+            <div class="container">
+                <div class="title page-biography__title">Biography</div>
+                <p class="text">
+                    God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase!
+                    <br>
+                    God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
+                </p>
             </div>
         </div>
     </main>
