--- a/page.html
+++ b/page.html
@@ -58,6 +58,55 @@
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
                 </p>
             </div>
+            <div class="page-biography__friends">
+                <div class="title page-biography__title">Words of related and friends</div>
+                <div class="page-biography__hero">
+                    <div class="page-biography__content">
+                        <div class="page-biography__item">
+                            <p>
+                                When I went through a very anxious phase as a child, I got it  
+                                God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
+                            </p>
+                            <div class="page-biography__author">
+                                Mike Wazowsky <span>11th Dec 2022</span>
+                            </div>
+                        </div>
+                        <div class="page-biography__item mb-0">
+                            <img src="./assets/from-parents-and-friends.png" alt="photo">
+                            <p>
+                                When I went through a very anxious phase as a child, I got it  
+                                God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
+                            </p>
+                            <div class="page-biography__author">
+                                Mike Wazowsky <span>11th Dec 2022</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-biography__content">
+                        <div class="page-biography__item">
+                            <p>
+                                Ben I went through a very anxious phase as a child, I got it  
+                                God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me.
+                                <span class="read-more">Read more...</span>
+                            </p>
+                            <div class="page-biography__author">
+                                Mike Wazowsky <span>11th Dec 2022</span>
+                            </div>
+                        </div>
+                        <div class="page-biography__item mb-0">
+                            <img src="./assets/from-parents-and-friends.png" alt="photo">
+                            <p>
+                                When I went through a very anxious phase as a child, I got it  
+                                God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
+                            </p>
+                            <div class="page-biography__author">
+                                Mike Wazowsky <span>11th Dec 2022</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn page-biography__btn">Add a memory of a person</button>
+            </div>
         </div>
     </main>
 
