page media section

--- a/page.html
+++ b/page.html
@@ -59,7 +59,7 @@
                 </p>
             </div>
             <div class="page-biography__friends">
-                <div class="title page-biography__title">Words of related and friends</div>
+                <h3 class="title page-biography__title">Words of related and friends</h3>
                 <div class="page-biography__hero">
                     <div class="page-biography__content">
                         <div class="page-biography__item">
@@ -106,6 +106,63 @@
                     </div>
                 </div>
                 <button class="btn page-biography__btn">Add a memory of a person</button>
+            </div>
+        </div>
+        <!-- Media -->
+        <div class="page-media">
+            <div class="page-media__hero">
+                <h3 class="title page-media__title">Media files</h3>
+                <h4 class="page-media__subtitle">Photo</h4>
+                <div class="page-media__list">
+                    <div class="page-media__item page-media__photo">
+                        <img src="./assets/page-media/1.png" alt="photo">
+                    </div>
+                    <div class="page-media__item page-media__photo">
+                        <img src="./assets/page-media/2.png" alt="photo">
+                    </div>
+                    <div class="page-media__item page-media__photo">
+                        <img src="./assets/page-media/3.png" alt="photo">
+                    </div>
+                    <div class="page-media__photo">
+                        <img src="./assets/page-media/1.png" alt="photo">
+                        <div class="page-media__more">
+                            <div>
+                                <span>32</span>more
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h4 class="page-media__subtitle">Video</h4>
+                <div class="page-media__list">
+                    <figure class="page-media__video">
+                        <div class="page-media__item">
+                            <img src="./assets/page-media/3.png" alt="video">
+                        </div>
+                        <figcaption>Holliday in the Berlin</figcaption>
+                    </figure>
+                    <figure class="page-media__video">
+                        <div class="page-media__item">
+                            <img src="./assets/page-media/1.png" alt="video">
+                        </div>
+                        <figcaption>Summer in Rostock</figcaption>
+                    </figure>
+                    <figure class="page-media__video">
+                        <div class="page-media__item">
+                            <img src="./assets/page-media/3.png" alt="video">
+                        </div>
+                        <figcaption>Holliday in the Berlin</figcaption>
+                    </figure>
+                    <figure class="page-media__video">
+                        <div class="page-media__video-item">
+                            <img src="./assets/page-media/2.png" alt="video">
+                            <div class="page-media__more">
+                                <div>
+                                    <span>32</span>more
+                                </div>
+                            </div>
+                        </div>
+                    </figure>
+                </div>
             </div>
         </div>
     </main>
@@ -171,6 +228,5 @@
 
     <script src="./script/jquery.slim.js"></script>
     <script src="./script/owl.carousel.min.js"></script>
-    <script src="./script/main.js"></script>
 </body>
 </html>
