--- a/page.html
+++ b/page.html
@@ -165,6 +165,34 @@
                 </div>
             </div>
         </div>
+        <!-- Links -->
+        <div class="page-links">
+            <div class="page-links__hero">
+                <h3 class="title page-links__title">Links</h3>
+                <div class="page-links__list">
+                    <a href="" class="page-links__item">
+                        <span class="page-links__name">Wolfgang in wikipedia</span>
+                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                        <span class="page-links__hover">Open link</span>
+                    </a>
+                    <a href="" class="page-links__item">
+                        <span class="page-links__name">Wolfgang in wikipedia</span>
+                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                        <span class="page-links__hover">Open link</span>
+                    </a>
+                    <a href="" class="page-links__item">
+                        <span class="page-links__name">Wolfgang in wikipedia</span>
+                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                        <span class="page-links__hover">Open link</span>
+                    </a>
+                    <a href="" class="page-links__item">
+                        <span class="page-links__name">Wolfgang in wikipedia</span>
+                        <span class="page-links__link">instagram.com/sydorov.alex/</span>
+                        <span class="page-links__hover">Open link</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
