--- a/page.html
+++ b/page.html
@@ -193,6 +193,29 @@
                 </div>
             </div>
         </div>
+        <!-- Where is rested -->
+        <div class="page-rested">
+            <div class="page-rested__hero">
+                <h3 class="page-rested__title">Where is rested</h3>
+                <div class="page-rested__wrapper">
+                    <img src="./assets/page-map.png" alt="map" class="page-rested__map">
+                    <div class="page-rested__content">
+                        <h3 class="title page-rested__subtitle">Neuer Friedhof Rostock 37 row, 4 section</h3>
+                        <div class="page-rested__adress">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.96927 15.0809L8 15.9995L9.03073 15.0809C12.3221 12.1477 14 9.54211 14 7.10311C14 3.64043 11.3426 1 8 1C4.65737 1 2 3.64043 2 7.10311C2 9.54211 3.67789 12.1477 6.96927 15.0809ZM8 3C10.2409 3 12 4.74787 12 7.10311C12 8.77275 10.702 10.8469 8 13.3171C5.298 10.8469 4 8.77275 4 7.10311C4 4.74787 5.75908 3 8 3ZM8 5C9.10457 5 10 5.89543 10 7C10 8.10457 9.10457 9 8 9C6.89543 9 6 8.10457 6 7C6 5.89543 6.89543 5 8 5ZM7 7C7 6.44772 7.44772 6 8 6C8.55228 6 9 6.44772 9 7C9 7.55228 8.55228 8 8 8C7.44772 8 7 7.55228 7 7Z" fill="white"/>
+                            </svg>                                
+                            <p>Satower Str. 16, 18050 Rostock</p>
+                        </div>
+                        <h4 class="title page-rested__subtitle">How to find</h4>
+                        <p class="text page-rested__text">
+                            Sculptor G. V. Neroda made a grave monument to Sergei Eisenstein from dark-colored granite. The figured stele consists of two parts with unworked side faces, united by a large engraved master's name. A stone bas-relief flaunts on the wide part of the slab - a portrait of the director in profile. The tombstone stands on stone blocks of a lighter shade, made up of one tombstone.
+                        </p>
+                        <p class="page-rested__coords">Exact coordinates: <span>55.725163, 37.553576</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
