--- a/page.html
+++ b/page.html
@@ -50,13 +50,41 @@
         </div>
         <!-- Biography -->
         <div class="page-biography">
-            <div class="container">
+            <div class="container page-biography__main">
                 <div class="title page-biography__title">Biography</div>
                 <p class="text">
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase!
                     <br><br>
                     God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !God Bless' on every step going upstairs to bed. I did this every day for the best part of a year and Mum always replied without even a hint of irritation as she knew how important it was to me, although I am sure she was happy when I grew out of that phase !
                 </p>
+            </div>
+            <div class="page-biography__carousel-wrap">
+                <div class="page-biography__carousel owl-carousel">
+                    <div class="page-biography__carousel-item">
+                        <img src="./assets/page-carousel/1.png" alt="1">
+                    </div>
+                    <div class="page-biography__carousel-item">
+                        <img src="./assets/page-carousel/2.png" alt="1">
+                    </div>
+                    <div class="page-biography__carousel-item">
+                        <img src="./assets/page-carousel/3.png" alt="1">
+                    </div>
+                    <div class="page-biography__carousel-item">
+                        <img src="./assets/page-carousel/4.png" alt="1">
+                    </div>
+                </div>
+                <div class="page-biography__controls">
+                    <button class="page-biography__carousel-btn biography-left-btn">
+                        <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.76222 0.385486L1.33594 5.81177L6.76222 11.238" stroke="#131414"/>
+                        </svg>                            
+                    </button>
+                    <button class="page-biography__carousel-btn biography-right-btn">
+                        <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.23778 11.6145L6.66406 6.18823L1.23778 0.76195" stroke="#131414"/>
+                        </svg>                            
+                    </button>
+                </div>
             </div>
             <div class="page-biography__friends">
                 <h3 class="title page-biography__title">Words of related and friends</h3>
@@ -279,5 +307,6 @@
 
     <script src="./script/jquery.slim.js"></script>
     <script src="./script/owl.carousel.min.js"></script>
+    <script src="./script/main-page.js"></script>
 </body>
 </html>
