page head adaptive

--- a/page.html
+++ b/page.html
@@ -33,9 +33,20 @@
                     <div class="page-head__thumbnail-label">In memory of</div>
                 </div>
                 <div class="page-head__name-wrapper">
-                    <span class="page-head__name">Wolfgang Iohan <br> Becker</span>
-                    <span class="page-head__date page-head__date-birth">December</span>
-                    <span class="page-head__date page-head__date-death">December</span>
+                    <p class="page-head__name">Wolfgang Iohan</p>
+                    <p class="page-head__date-wrap">
+                        <span class="page-head__date page-head__date-birth">December</span>
+                        <span class="page-head__name page-head__surname">Becker</span>
+                        <span class="page-head__date page-head__date-death">December</span>
+                    </p>
+                    <div class="page-head__date-wrap-mobile">
+                        <p class="page-head__name page-head__surname">Becker</p>
+                        <div>
+                            <span class="page-head__date">December</span>
+                            <span class="page-head__date page-head__date-dash">-</span>
+                            <span class="page-head__date">December</span>
+                        </div>
+                    </div>
                 </div>
                 <svg class="page-head__quots" width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.68859 11.36C7.68859 12.9933 7.33859 14.23 6.63859 15.07C5.98526 15.91 5.09859 16.33 3.97859 16.33C2.81193 16.33 1.87859 15.91 1.17859 15.07C0.478594 14.23 0.128594 13.0867 0.128594 11.64C0.128594 6.6 3.11526 2.84333 9.08859 0.369996L9.29859 0.719996C6.17193 2.68 4.60859 5.22333 4.60859 8.35C4.60859 10.2167 5.63526 11.22 7.68859 11.36ZM17.6286 11.36C17.6286 12.9933 17.2786 14.23 16.5786 15.07C15.9253 15.91 15.0386 16.33 13.9186 16.33C12.7519 16.33 11.8186 15.91 11.1186 15.07C10.4653 14.23 10.1386 13.0867 10.1386 11.64C10.1386 6.6 13.1019 2.84333 19.0286 0.369996L19.2386 0.719996C16.1119 2.68 14.5486 5.22333 14.5486 8.35C14.5486 10.2167 15.5753 11.22 17.6286 11.36Z" fill="#C3DAE2"/>
@@ -49,7 +60,7 @@
             </div>
         </div>
         <!-- Biography -->
-        <div class="page-biography">
+        <div class="page-biography" style="display: none;">
             <div class="container page-biography__main">
                 <div class="title page-biography__title">Biography</div>
                 <p class="text">
@@ -137,7 +148,7 @@
             </div>
         </div>
         <!-- Media -->
-        <div class="page-media">
+        <div class="page-media" style="display: none;">
             <div class="page-media__hero">
                 <h3 class="title page-media__title">Media files</h3>
                 <h4 class="page-media__subtitle">Photo</h4>
@@ -194,7 +205,7 @@
             </div>
         </div>
         <!-- Links -->
-        <div class="page-links">
+        <div class="page-links" style="display: none;">
             <div class="page-links__hero">
                 <h3 class="title page-links__title">Links</h3>
                 <div class="page-links__list">
@@ -222,7 +233,7 @@
             </div>
         </div>
         <!-- Where is rested -->
-        <div class="page-rested">
+        <div class="page-rested" style="display: none;">
             <div class="page-rested__hero">
                 <h3 class="page-rested__title">Where is rested</h3>
                 <div class="page-rested__wrapper">
